CheckCloudletStartDelayForTransferRequiredFilesTest refactoring
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>